# type_eq

./: .gitignore  README.md  dune-project  flake.nix  type_eq.opam
.github/workflows/: run-tests.yml
lib/: dune  type_eq.ml  type_eq.mli
test/: dune  type_eq.ml
